# UICornerstone

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  button_log.txt  label_log.txt  test_stderr.txt  test_stdout.txt  winframe_log.txt
.opencode/: opencode.jsonc
build_scripts/: build.bat  build_raylib.bat  build_sdl3.bat  build_sfml.bat  build_test.bat
doc/: BackendAbstraction_Design.md  Build_Guide.md  Button_Design.md  CheckBox_Design.md  ColorPicker_Design.md  ComboBox_Design.md  ComponentSystem_Design.md  ControlBase_Design.md  Dialog_Design.md  EditBox_Design.md  EventSystem_Design.md  FocusSystem_Design.md  GraphTool_Design.md  HandleControl_Design.md  Label_Design.md  LayoutSystem_Design.md  Menu_Design.md  NumericUpDown_Design.md  ProgressBar_Design.md  ResourceLoader_Design.md  Sample_Design.md  ScrollBar_Design.md  Slider_Design.md  Splitter_Design.md  TextArea_Design.md  Tutorial.md  UICornerstone_DLL_Design.md  WinFrame_Design.md  缩放分析.drawio  菜单定义.drawio
doc/guidelines/: README.md  build.md  coding.md  dependencies.md  design-docs.md  design-rules.md  history.md  pixel-format.md  testing.md
include/: Actor.h  AppCallbacks.h  BackendPlugin.h  Bench.h  Button.h  CheckBox.h  ColorPicker.h  ComboBox.h  ConstDef.h  ControlBase.h  Cursor.h  DataContext.h  Dialog.h  EditBox.h  EventQueue.h  EventTypes.h  FocusManager.h  Font.h  GraphOperaAdapt2d.h  GraphTool.h  HandleControl.h  HotReloader.h  InputBackend.h  Label.h  LayoutEngine.h  LayoutParser.h  LuotiAni.h  MainWindow.h  Material.h  Menu.h  NumericUpDown.h  Panel.h  PlatformUtils.h  ProgressBar.h  RenderDevice.h  ResourceLoader.h  ResourceProvider.h  SColor.h  ScrollBar.h  Slider.h  (+12 more)
layouts/: test_layout.json  test_layout_advanced.json
requirements/: ColorPicker_需求文档.md  ComboBox_需求文档.md
samples/: CMakeLists.txt
samples/hello_uicornerstone/: CMakeLists.txt  hello_uicornerstone.c
samples/sample_fromsource/: CMakeLists.txt  sample_fromsource.c
samples/sample_loadlibrary/: CMakeLists.txt  sample_loadlibrary.cpp
samples/sample_programmatic/: CMakeLists.txt  sample_programmatic.c
src/: Actor.cpp  BackendManager.cpp  BackendPlugin.cpp  Bench.cpp  Button.cpp  CallbackAdapters.cpp  CallbackAdapters.h  CheckBox.cpp  ColorPicker.cpp  ComboBox.cpp  ConstDef.cpp  ControlBase.cpp  Cursor.cpp  DataContext.cpp  Dialog.cpp  EditBox.cpp  EventQueue.cpp  FocusManager.cpp  GraphTool.cpp  HandleControl.cpp  HotReloader.cpp  InputBackend.cpp  Label.cpp  LayoutEngine.cpp  LayoutParser.cpp  MainWindow.cpp  Material.cpp  Menu.cpp  NumericUpDown.cpp  Panel.cpp  ProgressBar.cpp  RenderDevice.cpp  ResourceLoader.cpp  ResourceProvider.cpp  ScrollBar.cpp  Slider.cpp  Splitter.cpp  Surface.cpp  TextArea.cpp  TextRenderer.cpp  (+4 more)
src/backend/: BackendBridge.h
src/backend/raylib/: BackendPlugin.cpp  Cursor.cpp  InputBackend.cpp  RaylibCompat.h  RenderDevice.cpp  TextRenderer.cpp  Window.cpp  nanosvg.h  nanosvgrast.h
src/backend/sdl3/: BackendPlugin.cpp  Cursor.cpp  InputBackend.cpp  RenderDevice.cpp  TextRenderer.cpp  Window.cpp
src/backend/sfml/: BackendPlugin.cpp  Cursor.cpp  InputBackend.cpp  RenderDevice.cpp  TextRenderer.cpp  Window.cpp
test/: CMakeLists.txt  test_api.c  test_button.cpp  test_checkbox.cpp  test_colorpicker.cpp  test_combobox.cpp  test_combobox_cabi.cpp  test_combobox_cabi_raylib.cpp  test_combobox_cabi_sdl3.cpp  test_combobox_cabi_sfml.cpp  test_combobox_cabi_shared.h  test_dialog.cpp  test_dialog_cabi.cpp  test_dialog_cabi_raylib.cpp  test_dialog_cabi_sdl3.cpp  test_dialog_cabi_sfml.cpp  test_dialog_cabi_shared.h  test_editbox.cpp  test_fromsource.cpp  test_fromsource_cabi.cpp  test_fromsource_raylib.cpp  test_fromsource_sdl3.cpp  test_fromsource_sfml.cpp  test_graphtool.cpp  test_handlecontrol.cpp  test_label.cpp  test_layout.cpp  test_layout_advanced.cpp  test_menu.cpp  test_numericupdown.cpp  test_numericupdown_cabi.cpp  test_progressbar.cpp  test_slider.cpp  test_splitter.cpp  test_splitter_cabi.cpp  test_winframe.cpp
